--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.AddPostActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".activities.AddPostActivity">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/_13ssp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="25dp"
         android:fontFamily="@font/nunito_regular"
         android:text="Add Post"
         android:textColor="@color/black"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="25dp"/>
+        android:textSize="@dimen/_13ssp" />
 
     <EditText
         android:id="@+id/content"
@@ -25,13 +26,21 @@
         android:layout_marginTop="25dp"
         android:clipToPadding="false"
         android:fontFamily="@font/nunito_regular"
-        android:hint="Content"
         android:gravity="top"
+        android:hint="Content"
         android:inputType="textEmailAddress"
         android:paddingHorizontal="@dimen/_12ssp"
         android:paddingVertical="12.5dp"
         android:textColorHint="@color/primary__color"
         android:textSize="@dimen/_11ssp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_18sdp"
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/nunito_regular"
+        android:text="Recomended to write content in english" />
 
     <EditText
         android:id="@+id/hashTag"
@@ -39,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_36sdp"
         android:layout_marginHorizontal="@dimen/_18sdp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:clipToPadding="false"
         android:fontFamily="@font/nunito_regular"
         android:hint="HashTag"
@@ -52,31 +61,31 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/_13ssp"
+        android:layout_marginHorizontal="@dimen/_18sdp"
+        android:layout_marginTop="25dp"
         android:fontFamily="@font/nunito_regular"
         android:text="Images"
-        android:layout_marginHorizontal="@dimen/_18sdp"
         android:textColor="@color/black"
-        android:layout_marginTop="25dp"/>
+        android:textSize="@dimen/_13ssp" />
 
     <com.google.android.flexbox.FlexboxLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:flexWrap="wrap"
         android:padding="@dimen/_12ssp"
-        app:dividerDrawable="@drawable/empty_divider"
-        app:showDivider="middle"
+        app:alignContent="stretch"
         app:alignItems="stretch"
-        app:alignContent="stretch">
+        app:dividerDrawable="@drawable/empty_divider"
+        app:flexWrap="wrap"
+        app:showDivider="middle">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/uploadImage1"
             android:layout_width="@dimen/_90sdp"
             android:layout_height="@dimen/_90sdp"
-            app:layout_flexGrow="1"
             android:layout_gravity="fill_horizontal"
             android:background="@drawable/rounded_corner"
-            android:backgroundTint="@color/active_bg">
+            android:backgroundTint="@color/active_bg"
+            app:layout_flexGrow="1">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -95,46 +104,49 @@
             android:id="@+id/uploadedImage2"
             android:layout_width="@dimen/_90sdp"
             android:layout_height="@dimen/_90sdp"
-            app:layout_flexGrow="1"
             android:layout_gravity="fill_horizontal"
             android:background="@drawable/rounded_corner"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
+            android:src="@drawable/image2"
             android:visibility="gone"
-            android:src="@drawable/image2" />
+            app:layout_flexGrow="1" />
+
         <ImageView
             android:id="@+id/uploadedImage3"
             android:layout_width="@dimen/_90sdp"
             android:layout_height="@dimen/_90sdp"
-            app:layout_flexGrow="1"
             android:layout_gravity="fill_horizontal"
             android:background="@drawable/rounded_corner"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
+            android:src="@drawable/image2"
             android:visibility="gone"
-            android:src="@drawable/image2" />
+            app:layout_flexGrow="1" />
+
         <ImageView
             android:id="@+id/uploadedImage4"
             android:layout_width="@dimen/_90sdp"
             android:layout_height="@dimen/_90sdp"
-            app:layout_flexGrow="1"
             android:layout_gravity="fill_horizontal"
             android:background="@drawable/rounded_corner"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
+            android:src="@drawable/image2"
             android:visibility="gone"
-            android:src="@drawable/image2" />
+            app:layout_flexGrow="1" />
+
         <ImageView
             android:id="@+id/uploadedImage5"
             android:layout_width="@dimen/_90sdp"
             android:layout_height="@dimen/_90sdp"
-            app:layout_flexGrow="1"
             android:layout_gravity="fill_horizontal"
             android:background="@drawable/rounded_corner"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
+            android:src="@drawable/image2"
             android:visibility="gone"
-            android:src="@drawable/image2" />
+            app:layout_flexGrow="1" />
 
 
     </com.google.android.flexbox.FlexboxLayout>
@@ -143,6 +155,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true">
+
         <Button
             android:id="@+id/save"
             android:layout_width="match_parent"
@@ -156,13 +169,13 @@
             android:text="Save"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="@dimen/_12ssp"
-            />
+            android:textSize="@dimen/_12ssp" />
+
         <ProgressBar
             android:id="@+id/progressBar"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:layout_gravity="center"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
     </FrameLayout>
 </LinearLayout>
