--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,9 +2,9 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/page_bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/page_bg"
     tools:context=".activities.LoginActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,9 +20,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:lottie_rawRes="@raw/animation_loini58i"
             app:lottie_autoPlay="true"
-            app:lottie_loop="true"/>
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/animation_loini58i" />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="@dimen/_48sdp"
@@ -30,26 +31,26 @@
             android:layout_marginStart="25dp"
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/primary__color"
-            app:tint="@color/white"
-            android:contentDescription="a"
             android:clipToOutline="true"
+            android:contentDescription="a"
             android:elevation="10dp"
-            app:fabCustomSize="@dimen/_48sdp"
             android:src="@drawable/arrow_back"
+            app:fabCustomSize="@dimen/_48sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/fab_3_rounded" />
+            app:shapeAppearanceOverlay="@style/fab_3_rounded"
+            app:tint="@color/white" />
 
         <TextView
             android:id="@+id/heading_text"
+            style="@style/text__color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
             android:fontFamily="@font/nunito_bold"
             android:text="Log In"
             android:textSize="@dimen/_20sdp"
             android:textStyle="bold"
-            style="@style/text__color"
-            android:layout_marginTop="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/header_lottie" />
@@ -61,42 +62,69 @@
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/heading_text">
 
-            <EditText
-                android:id="@+id/email"
-                style="@style/input__bg"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_36sdp"
-                android:layout_marginHorizontal="@dimen/_18sdp"
-                android:layout_marginTop="30dp"
-                android:clipToPadding="false"
-                android:fontFamily="@font/nunito_regular"
-                android:hint="Email"
-                android:inputType="textEmailAddress"
-                android:paddingHorizontal="@dimen/_12ssp"
-                android:paddingVertical="12.5dp"
-                android:textColorHint="@color/primary__color"
-                android:textSize="@dimen/_11ssp" />
-
-            <EditText
-                android:id="@+id/password"
-                style="@style/input__bg"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_36sdp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_18sdp"
                 android:layout_marginTop="20dp"
-                android:clipToPadding="false"
-                android:fontFamily="@font/nunito_regular"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:paddingHorizontal="@dimen/_12ssp"
-                android:paddingVertical="12.5dp"
-                android:textColorHint="@color/primary__color"
-                android:textSize="@dimen/_11ssp" />
+                app:hintEnabled="true"
+                app:passwordToggleTint="@color/primary__color">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_36sdp"
+                    android:background="@drawable/edit__input"
+                    android:fontFamily="@font/nunito_regular"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:paddingHorizontal="@dimen/_12ssp"
+                    android:paddingVertical="12.5dp"
+                    android:textSize="@dimen/_11ssp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <!--            <EditText-->
+            <!--                android:id="@+id/password"-->
+            <!--                style="@style/input__bg"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="@dimen/_36sdp"-->
+            <!--                android:layout_marginHorizontal="@dimen/_18sdp"-->
+            <!--                android:layout_marginTop="20dp"-->
+            <!--                android:clipToPadding="false"-->
+            <!--                android:fontFamily="@font/nunito_regular"-->
+            <!--                android:hint="Password"-->
+            <!--                android:inputType="textPassword"-->
+            <!--                android:paddingHorizontal="@dimen/_12ssp"-->
+            <!--                android:paddingVertical="12.5dp"-->
+            <!--                android:textColorHint="@color/primary__color"-->
+            <!--                android:textSize="@dimen/_11ssp" />-->
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/_18sdp"
+                android:layout_marginTop="20dp"
+                app:hintEnabled="true"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/primary__color">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_36sdp"
+                    android:background="@drawable/edit__input"
+                    android:fontFamily="@font/nunito_regular"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:paddingHorizontal="@dimen/_12ssp"
+                    android:paddingVertical="12.5dp"
+                    android:textSize="@dimen/_11ssp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:animateLayoutChanges="true">
+
                 <Button
                     android:id="@+id/log_in"
                     android:layout_width="match_parent"
@@ -108,6 +136,7 @@
                     android:elevation="30dp"
                     android:fontFamily="@font/nunito_medium"
                     android:outlineAmbientShadowColor="@color/primary__color"
+                    android:shadowColor="@color/primary__color"
                     android:text="Log In"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
@@ -118,7 +147,7 @@
                     android:layout_width="@dimen/_25sdp"
                     android:layout_height="@dimen/_25sdp"
                     android:layout_gravity="center"
-                    android:visibility="invisible"/>
+                    android:visibility="invisible" />
             </FrameLayout>
         </LinearLayout>
 
@@ -144,11 +173,11 @@
 
             <TextView
                 android:id="@+id/sign_up"
+                style="@style/text__color"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nunito_bold"
                 android:text=" Sign up"
-                style="@style/text__color"
                 android:textSize="@dimen/_12ssp"
                 android:textStyle="bold" />
         </LinearLayout>
