--- a/app/src/main/res/layout/fragment_comment_list_dialog_list_dialog_item.xml
+++ b/app/src/main/res/layout/fragment_comment_list_dialog_list_dialog_item.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingHorizontal="15dp"
-    android:layout_marginTop="@dimen/_20ssp"
     >
 
     <com.makeramen.roundedimageview.RoundedImageView
@@ -37,6 +36,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_max="wrap"
         app:layout_constraintWidth_percent="0.8" />
+    <TextView
+        android:id="@+id/textDateTime"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_4sdp"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_8sdp"
+        android:fontFamily="@font/nunito_regular"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textMessage"/>
 
     <ImageView
         android:id="@+id/removeComment"
