--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -99,7 +99,7 @@
             android:id="@+id/imageView1"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/profile_img"
+            android:src="@drawable/stats"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
